--- a/django/Dockerfile
+++ b/django/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.12-slim as base
 
-WORKDIR /app/backend/.
+WORKDIR /app/.
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 
