Added Django REST framework

--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.8.1
 Django==5.0.4
 django-cors-headers==4.3.1
+django-rest-framework==0.1.0
+djangorestframework==3.15.1
 psycopg2-binary==2.9.9
 sqlparse==0.5.0
