--- a/compose.yml
+++ b/compose.yml
@@ -7,6 +7,7 @@ services:
     environment:
       - HOST_IP=${HOST_IP}
       - USER_GID=${USER_GID}
+      - GENERATE_SOURCEMAP=${GENERATE_SOURCEMAP}
     ports:
       - "3000:3000"
     volumes:
