--- a/react/Dockerfile
+++ b/react/Dockerfile
@@ -2,10 +2,10 @@ FROM node:current-alpine3.19 as base
 
 RUN apk update
 WORKDIR /app/.
-COPY frontend .
-
+COPY frontend/package.json .
 RUN npm install
 
+COPY frontend/. .
 COPY script.sh .
 RUN chmod +x script.sh
 CMD ["./script.sh"]
