--- a/compose.yml
+++ b/compose.yml
@@ -13,6 +13,7 @@ services:
       - "3000:3000"
     volumes:
       - ./debug/react:/debug/src
+    restart: on-failure
   django:
     build: django/.
     container_name: django
@@ -32,6 +33,7 @@ services:
       - DJANGO_SUPERUSER_PASSWORD=${DJANGO_SUPERUSER_PASSWORD}
       - DJANGO_SUPERUSER_EMAIL=${DJANGO_SUPERUSER_EMAIL}
       - DJANGO_SUPERUSER_USERNAME=${DJANGO_SUPERUSER_USERNAME}
+    restart: on-failure
   postgresql:
     build: postgres/.
     container_name: postgresql
@@ -41,6 +43,7 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
+    restart: on-failure
     healthcheck:
       test: pg_isready -d django_db -U postgres -h postgresql -p 5432
       interval: 5s
