--- a/compose.yml
+++ b/compose.yml
@@ -5,6 +5,7 @@ services:
     build: react/.
     container_name: react
     environment:
+      - REACT_APP_DJANGO_PORT=${DJANGO_PORT}
       - REACT_APP_HOST_IP=${HOST_IP}
       - REACT_APP_REDIRECT_URI=${REDIRECT_URI}
       - USER_GID=${USER_GID}
