Replace host ip with host name

--- a/compose.yml
+++ b/compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       - REACT_APP_DJANGO_PORT=${DJANGO_PORT}
       - PORT=${REACT_PORT}
-      - REACT_APP_HOST_IP=${HOST_IP}
+      - REACT_APP_HOST_IP=${HOST_NAME}
       - REACT_APP_REDIRECT_URI=${REDIRECT_URI}
       - USER_GID=${USER_GID}
       - GENERATE_SOURCEMAP=${GENERATE_SOURCEMAP}
@@ -32,6 +32,7 @@ services:
       - DJANGO_SECRET_KEY=${DJANGO_SECRET_KEY}
       - CLIENT_SECRET=${CLIENT_SECRET}
       - HOST_IP=${HOST_IP}
+      - HOST_NAME=${HOST_NAME}
       - USER_GID=${USER_GID}
       - DJANGO_SUPERUSER_PASSWORD=${DJANGO_SUPERUSER_PASSWORD}
       - DJANGO_SUPERUSER_EMAIL=${DJANGO_SUPERUSER_EMAIL}
