--- a/compose.yml
+++ b/compose.yml
@@ -7,7 +7,8 @@ services:
     environment:
       - REACT_APP_DJANGO_PORT=${DJANGO_PORT}
       - PORT=${REACT_PORT}
-      - REACT_APP_HOST_IP=${HOST_NAME}
+      - REACT_APP_HOST_NAME=${HOST_NAME}
+      - REACT_APP_HOST_IP=${HOST_IP}
       - REACT_APP_REDIRECT_URI=${REDIRECT_URI}
       - USER_GID=${USER_GID}
       - GENERATE_SOURCEMAP=${GENERATE_SOURCEMAP}
