--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -1,12 +1,14 @@
 asgiref==3.8.1
 certifi==2024.2.2
 charset-normalizer==3.3.2
-idna==3.7
-requests==2.31.0
-urllib3==2.2.1
 Django==5.0.4
 django-cors-headers==4.3.1
 django-rest-framework==0.1.0
 djangorestframework==3.15.1
+gunicorn==22.0.0
+idna==3.7
+packaging==24.0
 psycopg2-binary==2.9.9
+requests==2.31.0
 sqlparse==0.5.0
+urllib3==2.2.1
