--- a/compose.yml
+++ b/compose.yml
@@ -5,6 +5,7 @@ services:
     build: 
       dockerfile: Dockerfile
       context: react/.
+      target: ${REACT_STAGE}
       args:
         REACT_APP_DJANGO_PORT: ${DJANGO_PORT}
         REACT_APP_HOST_NAME: ${HOST_NAME}
@@ -24,7 +25,10 @@ services:
       - ./debug/react:/debug/src
     restart: on-failure
   django:
-    build: django/.
+    build: 
+      dockerfile: Dockerfile
+      context: django/.
+      target: ${DJANGO_STAGE}
     container_name: django
     depends_on:
       postgresql:
