--- a/django/Dockerfile
+++ b/django/Dockerfile
@@ -4,10 +4,11 @@ WORKDIR /app/.
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 COPY . .
-RUN chmod +x *-script.sh
+RUN chmod +x *-script.sh && mv prod-script.sh backend/.
 
 from base as dev
 CMD [ "sh", "./dev-script.sh" ]
 
 from base as prod
+WORKDIR /app/backend
 CMD [ "sh", "./prod-script.sh" ]
