--- a/react/configs/default.conf
+++ b/react/configs/default.conf
@@ -1,9 +1,14 @@
 server {
-    listen       80;
-    listen  [::]:80;
-    server_name  2-a-6.42heilbronn.de www.2-a-6.42heilbronn.de;
+    listen       443 ssl;
+    #listen  [::]:80;
+    server_name	crossbow;
 
     #access_log  /var/log/nginx/host.access.log  main;
+
+	ssl_protocols TLSv1.2 TLSv1.3; 
+	ssl_prefer_server_ciphers on;
+	ssl_certificate_key /etc/ssl/certs/transcendence.key;
+	ssl_certificate /etc/ssl/certs/transcendence.crt;
 
     location / {
         root   /usr/share/nginx/html;
