--- a/compose.yml
+++ b/compose.yml
@@ -11,6 +11,8 @@ services:
         REACT_APP_HOST_NAME: ${HOST_NAME}
         REACT_APP_REDIRECT_URI: ${REDIRECT_URI}
     container_name: react
+    depends_on:
+      - django
     environment:
       - REACT_APP_DJANGO_PORT=${DJANGO_PORT}
       - PORT=${REACT_PORT}
