--- a/react/configs/default.conf
+++ b/react/configs/default.conf
@@ -1,3 +1,4 @@
+
 server {
     listen       443 ssl;
     #listen  [::]:80;
@@ -18,18 +19,32 @@ server {
     #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
-    #
+    
     error_page   500 502 503 504  /50x.html;
+	
+    # proxy the PHP scripts to Apache listening on 127.0.0.1:80
+    
+    #location ~ \.php$ {
+    #    proxy_pass   http://127.0.0.1;
+    #}
+	
     location = /50x.html {
         root   /usr/share/nginx/html;
     }
 
-    # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-    #
-    #location ~ \.php$ {
-    #    proxy_pass   http://127.0.0.1;
-    #}
+	 location /api {
+        try_files $uri @proxy_api;
+    }
 
+    location @proxy_api {
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header X-Url-Scheme $scheme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_pass   http://django:8000;
+    }
+	
     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
     #
     #location ~ \.php$ {
