--- a/react/configs/default.conf
+++ b/react/configs/default.conf
@@ -31,6 +31,10 @@ server {
     location = /50x.html {
         root   /usr/share/nginx/html;
     }
+	
+	location /api {
+		try_files $uri @proxy_api;
+    }
 
     location @proxy_api {
         proxy_set_header X-Forwarded-Proto https;
