--- a/react/Dockerfile
+++ b/react/Dockerfile
@@ -15,6 +15,8 @@ FROM base as build
 ARG REACT_APP_HOST_NAME
 ARG REACT_APP_DJANGO_PORT
 ARG REACT_APP_REDIRECT_URI
+ARG REACT_APP_HTTP_METHOD
+ENV REACT_APP_HTTP_METHOD=$REACT_APP_HTTP_METHOD
 ENV REACT_APP_HOST_NAME=$REACT_APP_HOST_NAME
 ENV REACT_APP_DJANGO_PORT=$REACT_APP_DJANGO_PORT
 ENV REACT_APP_REDIRECT_URI=$REACT_APP_REDIRECT_URI
