--- a/react/frontend/package.json
+++ b/react/frontend/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+	"socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
