changed django bind port to 0.0.0.0

--- a/react/configs/default.conf
+++ b/react/configs/default.conf
@@ -42,7 +42,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
         proxy_redirect off;
-        proxy_pass   https://django:8000;
+        proxy_pass   http://django:8000;
     }
 	
     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
