added prod stage for gameserver, created certificate and changed host to 0.0.0.0

--- a/gameserv/Dockerfile
+++ b/gameserv/Dockerfile
@@ -9,3 +9,8 @@ FROM base as dev
 COPY script.sh .
 RUN chmod +x script.sh
 CMD ["./script.sh"]
+
+FROM base as prod
+COPY script.sh .
+RUN chmod +x script.sh
+CMD ["./script.sh"]
