--- a/compose.yml
+++ b/compose.yml
@@ -1,27 +1,24 @@
 version: "3.8"
 
 services:
-    #  gameserv:
-    #    build:
-    #      dockerfile: Dockerfile
-    #      context: gameserv/.
-    #      target: dev
-    #    container_name: gameserv
-    #    depends_on:
-    #      - react
-    #    ports:
-    #      - "4000:4000"
-    #    networks:
-    #      game-network:
-    #        ipv4_address: ${GAME_IP}
-    #    environment:
-    #      - GAME_IP=${GAME_IP}
-    #      - HOST_NAME=${HOST_NAME}
-    #      - HOST_IP=${HOST_IP}
-    #      - USER_GID=${USER_GID}
-    #    volumes:
-    #      - ./debug/gameserv:/debug
-    #    restart: on-failure
+  gameserv:
+    build:
+      dockerfile: Dockerfile
+      context: gameserv/.
+      target: dev
+    container_name: gameserv
+    depends_on:
+      - react
+    ports:
+      - "4000:4000"
+    environment:
+      - GAME_IP=${GAME_IP}
+      - HOST_NAME=${HOST_NAME}
+      - HOST_IP=${HOST_IP}
+      - USER_GID=${USER_GID}
+    volumes:
+      - ./debug/gameserv:/debug
+    restart: on-failure
   react:
     build:
       dockerfile: Dockerfile
@@ -92,9 +89,3 @@ services:
       interval: 5s
       retries: 3
 
-networks:
-  game-network:
-    ipam:
-      driver: default
-      config:
-        - subnet: ${SUBNET}
