added socket reverse proxy

--- a/react/configs/default.conf
+++ b/react/configs/default.conf
@@ -31,9 +31,24 @@ server {
     location = /50x.html {
         root   /usr/share/nginx/html;
     }
+
+	location /socket.io {
+		try_files $uri @proxy_socket;
+    }
 	
 	location /api {
 		try_files $uri @proxy_api;
+    }
+
+    location @proxy_socket {
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header Host $host;
+		proxy_pass https://gameserv:4000;
+		proxy_http_version 1.1;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection "upgrade";
+		proxy_read_timeout 86400;
+
     }
 
     location @proxy_api {
