disabled generate sourcemap for production

--- a/compose.yml
+++ b/compose.yml
@@ -28,6 +28,7 @@ services:
         REACT_APP_HOST_NAME: ${HOST_NAME}
         REACT_APP_REDIRECT_URI: ${REDIRECT_URI}
         REACT_APP_HTTP_METHOD: ${HTTP_METHOD}
+        GENERATE_SOURCEMAP: ${GENERATE_SOURCEMAP}
     container_name: react
     depends_on:
       - django
@@ -52,8 +53,6 @@ services:
       context: django/.
       target: ${STAGE}
     container_name: django
-    ports:
-      - "${DJANGO_PORT}:${DJANGO_PORT}"
     depends_on:
       postgresql:
         condition: service_healthy
