fixed generate_sourcemap env var name

--- a/react/Dockerfile
+++ b/react/Dockerfile
@@ -17,7 +17,7 @@ ARG REACT_APP_DJANGO_PORT
 ARG REACT_APP_REDIRECT_URI
 ARG REACT_APP_HTTP_METHOD
 ARG GENERATE_SOURCEMAP
-ENV GENERATE_SOURCEMAP=$REACT_APP_GENERATE_SOURCEMAP
+ENV GENERATE_SOURCEMAP=$GENERATE_SOURCEMAP
 ENV REACT_APP_HTTP_METHOD=$REACT_APP_HTTP_METHOD
 ENV REACT_APP_HOST_NAME=$REACT_APP_HOST_NAME
 ENV REACT_APP_DJANGO_PORT=$REACT_APP_DJANGO_PORT
