--- a/react/frontend/package.json
+++ b/react/frontend/package.json
@@ -6,14 +6,17 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "mdb-react-ui-kit": "8.0.0",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
-	"three": "^0.164.1",
+    "howler": "^2.2.4",
+    "mdb-react-ui-kit": "8.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
-	"socket.io-client": "^4.7.5",
+    "socket.io-client": "^4.7.5",
+    "three": "^0.164.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
