--- a/compose.yml
+++ b/compose.yml
@@ -56,6 +56,8 @@ services:
     depends_on:
       postgresql:
         condition: service_healthy
+    ports:
+      - "${DJANGO_PORT}:${DJANGO_PORT}"
     volumes:
       - ./debug/django:/debug/backend
     environment:
