added /media route in nginx, changed url in react profile

--- a/react/configs/default.conf
+++ b/react/configs/default.conf
@@ -35,11 +35,15 @@ server {
 	location /socket.io {
 		try_files $uri @proxy_socket;
     }
-	
+
 	location /api {
 		try_files $uri @proxy_api;
     }
 
+	location /media {
+		alias /media;
+    }
+	
     location @proxy_socket {
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 		proxy_set_header Host $host;
